# SubDiffLLM

./: .gitignore  AGENTS.md  Code3-dub.srt  Code3-dub1.srt  Code3-sub.srt  Code3-sub1.srt  LICENSE  README.md  ThisThingOnRusDub.srt  ThisThingOnRusSub.srt  pyproject.toml  reportThisThingOn.html  reportThisThingOn.json  request.txt  test_align.py
.dual-graph/: info_graph.json  symbol_index.json
.github/workflows/: ci.yml
examples/: demo_a.srt  demo_b.srt
subs_diff/: __init__.py  __main__.py  align.py  checkpoint.py  cli.py  comparison.py  config.py  heuristics.py  llm.py  parser.py  report.py  reporter.py  segments.py  types.py
subs_diff.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: __init__.py  test_align.py  test_cli_filters.py  test_cli_parser.py  test_cli_resume.py  test_comparison.py  test_heuristics.py  test_llm_parsing.py  test_parser.py  test_report_serialization.py  test_segments.py
tests/fixtures/: sample_a.srt  sample_b.srt
